--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
 </head>
 
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="one">Discover hidden places in the world around you</h1>
 
     <a
         href="https://75a4c14fe86d438284e0866805ab47f7.cc-propeller.cloud/?allowEmbedForCodecademy=false&allowCopyAndPasteForCodecademy=true&allowFileUploadForCodecademy=true&allowFileDownloadForCodecademy=true&allowExternalLinkForCodecademy=true&allowAICodeExplainForCodecademy=true&allowAIChatAssistantForCodecademy=true&allowAIErrorExplainForCodecademy=true#">Download
         Excursion (Coming soon!)</a>
+
+    <video loop="true" autoplay="autoplay" muted>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <h1 class="two">Your personal travel guide</h1>
+
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+    <p>
+        <img src="resources/images/phone.png">
+    <h1 class="two">Coming Soon for iPhone and Android</h1>
+    </p>
+    <p>
+        <a
+            href="https://75a4c14fe86d438284e0866805ab47f7.cc-propeller.cloud/?allowEmbedForCodecademy=false&allowCopyAndPasteForCodecademy=true&allowFileUploadForCodecademy=true&allowFileDownloadForCodecademy=true&allowExternalLinkForCodecademy=true&allowAICodeExplainForCodecademy=true&allowAIChatAssistantForCodecademy=true&allowAIErrorExplainForCodecademy=true#">Download
+            Excursion (Coming soon!)</a>
+    </p>
 </body>
 
 </html>
